--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			top: 0;
 			left: 0;
 			right: 0;
-			height: 80px;
+			height: 12vh;
 			z-index: 1;
 		}
 		.topnav a {	
@@ -42,8 +42,8 @@
 		  color: white;
 		}
 		.nav-el {
-			width: 50px;
-			height: 50px;
+			width: 8vh;
+			height: 8vh;
 		}
 		#codepen {
 			padding-right: 20px;
@@ -375,7 +375,7 @@
 			background-color: #F3F3F3;
 			}
 			.text-box {
-			margin: 5vw 0px;
+			margin: 5vw 0 0 0;
     		font-size: 2.5vw;
 			width: 80vw;
 			}
@@ -401,7 +401,12 @@
 			}
 			#line {
 			width: 100vw;
+			margin-bottom: 0vh;
 			}
+		}
+		
+		@media only screen and (orientation: landscape) {
+			
 		}
 	</style>
 	
