--- a/index.html
+++ b/index.html
@@ -293,17 +293,6 @@
 		
 		
 		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-			#blank {
-				height: 20vw;
-			}
-			.topnav {
-				justify-content: space-around;
-				height: 20vw;
-			}
-			.nav-el {
-				width: 12vw;
-				height: 12vw;
-			}
 			#intro-flex {
 				flex-wrap: wrap;
 			}
@@ -396,7 +385,7 @@
 			font-size: 5vw;
 			}
 			#system {
-			margin-bottom: 0vh;
+			margin: 0vh;
 			background-color: #F3F3F3;
 			}
 			#line {
