Re-added central icons in nav-bar on mobile

--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
 		
 		
 		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+			.topnav {
+				justify-content: space-around;
+			}
 			#intro-flex {
 				flex-wrap: wrap;
 			}
@@ -386,11 +389,15 @@
 			}
 			#system {
 			margin: 0vh;
+			padding: 0vh;
 			background-color: #F3F3F3;
 			}
 			#line {
 			width: 100vw;
 			margin-bottom: 0vh;
+			}
+			#box1 {
+			margin: 0;
 			}
 		}
 		
