--- a/index.html
+++ b/index.html
@@ -398,11 +398,18 @@
 			}
 			#box1 {
 			margin: 0;
+			padding: 0;
 			}
 		}
 		
 		@media only screen and (orientation: landscape) {
-			
+		.nav-el {
+			width: 10vh;
+			height: 10vh;
+		}
+		.topnav {
+			height: 16vh;
+		}
 		}
 	</style>
 	
