--- a/index.html
+++ b/index.html
@@ -410,6 +410,12 @@
 		.topnav {
 			height: 16vh;
 		}
+		#para-flex {
+			font-size: 2vw;
+		}
+		#intro-flex {
+			flex-wrap: no-wrap;
+		}
 		}
 	</style>
 	
