--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 		}
 		#para-flex {
 			display: block;
-			font-size: 1em;
 			padding: 1.4vh 2.8vh 1.4vh 1.4vh;
 			margin: 0px;
 			width: auto;
@@ -390,7 +389,7 @@
 			}
 			#system {
 			margin: 0vh;
-			padding: 0vh;
+			padding-top: 1vh;
 			background-color: #F3F3F3;
 			}
 			#line {
