--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			--shadow3: #3914CC;
 		}
 		#blank {
-			height: 90px;
+			height: 12vh;
 		}
 		.topnav {
 		  	overflow: hidden;
@@ -410,7 +410,7 @@
 			height: 16vh;
 		}
 		#intro-flex {
-			font-size: 1.8vw;
+			font-size: 1.3vw;
 		}
 		}
 	</style>
@@ -594,6 +594,10 @@
 	<div class = "bigquote"> <i>“It is shameful that there are so few women in science...There is a misconception in America that women scientists are all dowdy spinsters. This is the fault of men.” </i><br></div>
 	<div class = "bigname"> – Chien-Shiung Wu </div>
 
+</div>
+	
+<div id = "#video">
+	<iframe src="https://www.bbc.com/ideas/videos/why-the-phrase-man-up-is-so-destructive/p06sdqg6/player" width="500" height="440" scrolling="no" style="overflow: hidden" allowfullscreen frameborder="0"></iframe>	   
 </div>
 	
 <div id = "footer"></div>
