--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 			background-color: #F3F3F3;
 			}
 			.text-box {
-			margin: 5vw 0 0 0;
+			margin: 5vw 0px;
     		font-size: 2.5vw;
 			width: 80vw;
 			}
@@ -410,6 +410,9 @@
 		}
 		#intro-flex {
 			font-size: 0.7vw;
+		}
+		#freddie-flex {
+			padding: 3vh;
 		}
 		}
 	</style>
