--- a/index.html
+++ b/index.html
@@ -301,7 +301,6 @@
 			#freddie-flex {
 				width: 80vw;
 				height: 80vw;
-				padding-bottom: 20px;
 				padding-top: 33px;
 			}
 			#intro-para {
@@ -403,6 +402,9 @@
 		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation: landscape) {
 		.nav-el {
 			width: 10vh;
+			height: 10vh;
+		}
+		#blank {
 			height: 10vh;
 		}
 		.topnav {
