Added final section

--- a/index.html
+++ b/index.html
@@ -282,11 +282,33 @@
 			text-align: left;
 			font-size: 3vw;
 		}
+		#outro-flex {
+			display: flex;
+			font-size: 1.5vw;
+			padding: 4vh 6vh 4vh 4vh;
+			font-family: 'Open Sans', sans-serif;
+			align-items: center;
+			justify-content: center;
+		}
+		#video {
+			padding: 4vh 4vh 4vh 6vh;
+		}
 		#footer {
+			font-family: 'Open Sans', sans-serif;
+			color: white;
 			width: 100vw;
+			font-size: 1.3vw;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			height: 80px;
 			overflow: hidden;
 			background-color: var(--nav);
+		}
+		#footer-text {
+			width: 90vw;
+			display: flex;
+			justify-content: flex-end;
 		}
 		
 		
@@ -600,12 +622,20 @@
 
 </div>
 	
-<div id = "#video">
+<div id = "outro-flex">	
+	
+<div id = "outro"> <p> While the above may seem disheartening, there is hope. It is people who have made the system, and it is people who can change it. One solution is to change the makeup of the system. Critics of quotas often argue for equality of opportunity, rather than equality of outcome, but it is precisely the inequality of outcome that often causes inequality of opportunity. If a woman aspiring to be a scientist sees few female scientists around her, and is criticised and objectified by her male colleagues, she does not have the same opportunity as a man. <br><br> Another solution is to tackle the system at its roots, and challenge stereotypes and biases at an early age. Most acts of discrimination are carried out unconsciously because stereotypes are so deeply rooted. If we can be made aware of these stereotypes, then we can stop them from taking hold. <br><br> The system requires many different solutions, but we can all do our bit to dismantle it. I am applying to this programme because I want to support those programmes that use quotas, rather than those that uphold the status quo. In my spare time I volunteer with the Great Men project, working with young boys to give them the opportunity to move away from the rigid rules of masculinity that influence many of the ways in which they think and act. You can find out more information about the project by watching this video produced by the BBC. Thank you for your time in reading this webpage – I hope you have enjoyed it. </p> </div>	
+	
+<div id = "video">
 	<iframe src="https://www.bbc.com/ideas/videos/why-the-phrase-man-up-is-so-destructive/p06sdqg6/player" width="500" height="440" scrolling="no" style="overflow: hidden" allowfullscreen frameborder="0"></iframe>	   
 </div>
 	
-<div id = "footer"></div>
+</div>
 	
+<div id = "footer">
+	<div id = "footer-text">
+	<p> Website produced by Freddie Preece. Images not my own.</p></div>
+</div>
 
 	
 </body>
