Added flex-wrap to outro

--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@
 			#intro-flex {
 				flex-wrap: wrap;
 			}
+			#outro-flex {
+				flex-wrap: wrap;
+			}
 			#freddie-flex {
 				width: 80vw;
 				height: 80vw;
