Outro font size on mobile

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
 			}
 			#outro-flex {
 				flex-wrap: wrap;
+				font-size: 2.5em;
 			}
 			#freddie-flex {
 				width: 80vw;
@@ -440,6 +441,9 @@
 		}
 		#freddie-flex {
 			padding: 3vh;
+		}	
+		#outro-flex {
+			font-size: 1.5vw;
 		}
 		}
 	</style>
