--- a/index.html
+++ b/index.html
@@ -424,6 +424,9 @@
 			.quote-flex {
 			margin-top: 0px;
 			}
+			#footer {
+			font-size: 2vw;
+			}
 		}
 		
 		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation: landscape) {
