--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 			#outro-flex {
 				flex-wrap: wrap;
 				font-size: 2.5em;
-				padding: 2px;
+				padding: 1vw;
 			}
 			#freddie-flex {
 				width: 80vw;
