--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@
 			#outro-flex {
 				flex-wrap: wrap;
 				font-size: 2.5em;
-				padding: 1vw;
+			}
+			#outro {
+				padding: 0.5vw;
 			}
 			#freddie-flex {
 				width: 80vw;
