--- a/index.html
+++ b/index.html
@@ -323,9 +323,10 @@
 			#outro-flex {
 				flex-wrap: wrap;
 				font-size: 2.5em;
+				padding: 0px;
 			}
 			#outro {
-				padding: 5px;
+				padding: 2.8vh;
 			}
 			#freddie-flex {
 				width: 80vw;
