--- a/index.html
+++ b/index.html
@@ -328,6 +328,9 @@
 			#outro {
 				padding: 2.8vh;
 			}
+			#video {
+				padding-top: 0px;
+			}
 			#freddie-flex {
 				width: 80vw;
 				height: 80vw;
